fix menu overflow

--- a/css/subtiles.css
+++ b/css/subtiles.css
@@ -145,8 +145,8 @@ form {
 	max-width: 100vw;
 	overflow-x: scroll;
 	overflow-y: hidden;
-	padding: 10rem 0 1rem 0;
-	margin: -10rem 0 -1rem 0;
+	padding: 20rem 0 1rem 0;
+	margin: -20rem 0 -1rem 0;
 }
 
 form label {
